data/all_generated_tests/raw_wast_tests/block_StackCorruption_1886.wast
;; 7. **Deeply Nested Arbitrary Length Block with Branch**:    - Description: Implement a deeply nested block structure with arbitrary long sequences and multiple branches.    - Constraint: Deep nesting and label management within block structures.    - Reasoning: This will test label indexing and stack height maintenance across multiple levels of nested blocks, exposing potential stack mismanagement.

(assert_invalid
  (module (func $deep-nested-block-with-branch (result i32)
    (block (result i32)
      (block (result i32)
        (block (result i32)
          (i32.const 1)
          (br 2)
          (i32.const 2)
        end)
        (br 1)
        (i32.const 3)
      end)
      (br 0)
      (i32.const 4)
    end)
  ))
  "type mismatch"
)